fix theme not showing

--- a/_sass/minima/custom-variables.scss
+++ b/_sass/minima/custom-variables.scss
@@ -1,1 +1,2 @@
 $grey-color: #44475a;
+$grey-color-light: #8a8ea1;
